feat: add utility routes for accessing states and countries
